--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <div id="app" class="overflow-x-hidden">
-
+  <div id="app" class="overflow-hidden">
     <!-- Sezione Intestazione -->
     <header class="bg-indigo-500 text-center text-white h-full py-10">
       <h1 class="text-7xl font-bold" id="title">Lorem ipsum dolor</h1>
@@ -21,7 +20,7 @@
       </div>
     </header>
     <!-- Sezione -->
-    <section class="relative h-screen w-full overflow-hidden cards-container">
+    <section class="relative h-screen w-full cards-container">
       <div
         class="relative w-full h-full bg-lime-500 flex items-center justify-center text-white text-5xl font-bold pt-5">
         Lime
@@ -35,15 +34,25 @@
         Verde
       </div>
     </section>
-
-    <!-- Sezione Finale con Quadrato Animato -->
-    <section class="flex justify-center items-center min-h-screen">
-      <div class="w-24 h-24 bg-indigo-900" id="square"></div>
+    <!-- Testi scorrevole -->
+    <!-- !! DA RIFARE-->
+    <section class="container mx-auto">
+      <div class="text-semibold text-4xl text-center my-10" id="moving-text-container">
+        <!-- Card Javascript -->
+      </div>
     </section>
 
+    <!-- Testo scorrevole-->
+    <section class="w-full px-4">
+      <div id="runner-container">
+        <h3 class="text-normal text-9xl text-nowrap" id="scroll-text">Lorem ipsum dolor, sit amet consectetur
+          adipisicing.</h3>
+      </div>
+
+
+    </section>
+  </div>
 </body>
-</div>
 <script type="module" src="/src/main.js"></script>
-</body>
 
 </html>
