--- a/index.html
+++ b/index.html
@@ -48,9 +48,18 @@
         <h3 class="text-normal text-9xl text-nowrap" id="scroll-text">Lorem ipsum dolor, sit amet consectetur
           adipisicing.</h3>
       </div>
-
-
     </section>
+    <div class="my-100">
+      <ul class="flex flex-wrap justify-center gap-4 " style="list-style: none;">
+        <li class="w-50 h-50 bg-indigo-500 rounded-full circle"></li>
+        <li class="w-50 h-50 bg-indigo-500 rounded-full circle"></li>
+        <li class="w-50 h-50 bg-indigo-500 rounded-full circle"></li>
+        <li class="w-50 h-50 bg-indigo-500 rounded-full circle"></li>
+      </ul>
+
+
+
+    </div>
   </div>
 </body>
 <script type="module" src="/src/main.js"></script>
